# TAS-LayerD

./: .gitignore  README.md  data_preprocess.py  download_ckpt.sh  eval.py  infer.py  pyproject.toml  split_val.py  train.py
hi_sam/pretrained_checkpoint/: weights.txt
src/layerd/: __init__.py
src/layerd/configs/: train.yaml
src/layerd/configs/model/: birefnet_l.yaml
src/layerd/data/: crello.py  renderer.py
src/layerd/evaluation/: __init__.py  dtw.py  edit_distance.py  edits.py  metrics.py
src/layerd/matting/birefnet/: README.md  __init__.py  dataset.py  image_proc.py  loss.py  train.py
src/layerd/models/: helpers.py  layerd.py
src/layerd/models/inpaint/: __init__.py  base.py  lama_inpaint.py
src/layerd/models/matting/: __init__.py  base.py  birefnet_matting.py
src/layerd/utils/: __init__.py  hisam_util.py  io.py  log.py  seed.py  split_layerd.py  split_words.py
src/layerd/weight/: weight.txt
test/: test_evaluator.py  test_evaluator_performance.py  test_evaluator_real_data.py
tools/: evaluator.py  match.py  render.py
tools/utils/: crello_utils.py  metrics.py
