[project]
name = "2025-dlcv-layer-decomposition"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10.0"
dependencies = [
    "numpy>=1.26",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "opencv-python>=4.8.0",
    "scikit-image>=0.25.0",
    "tqdm>=4.62.0",
    "huggingface-hub>=0.25.0",
    "accelerate>=1.1.1",
    "cr-renderer",
    "hydra-core>=1.3.2",
    "simple-lama-inpainting>=0.1.1",
    "datasets>=2.14.4",
    "transformers==4.55.4",
    "einops>=0.8.0",
    "timm>=1.0.12",
    "kornia>=0.5.0",
    "pycocotools",
    "matplotlib",
    "absl-py",
    "Polygon3==3.0.9.1",
    "python-Levenshtein",
    "scipy>=1.10.1",
    "easyocr>=1.7.2",
    "scikit-learn>=1.7.2",
    "gdown>=5.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/layerd"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true

[tool.ruff]
line-length = 120
target-version = "py310"
lint.ignore = ["F401", 'E741']

[tool.ruff.lint.isort]
known-first-party = ["layerd"]

[tool.uv]
index-strategy = "unsafe-best-match"

[tool.uv.pip]
emit-index-url = true

[tool.uv.sources]
cr-renderer = { git = "https://github.com/CyberAgentAILab/cr-renderer.git", rev = "a17e1fb" }


[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.5",
    "ipython>=8.29.0",
    "matplotlib>=3.10.0",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "ruff>=0.8.0",
    "mypy>=1.5.1",
    "types-PyYAML>=6.0.0",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::FutureWarning:timm.models.layers",
    "ignore::FutureWarning:timm.models.registry",
]
